--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,3 +7,40 @@ main {
   align-items: center;
   min-height: 100%;
 }
+
+.chat-box {
+  width: 500px;
+  height: 500px;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing);
+
+  form {
+    display: flex;
+    clear: both;
+    gap: var(--spacing);
+
+    input {
+      flex: 1;
+    }
+  }
+
+  .messages {
+    flex: 1;
+    overflow-y: auto;
+
+    div {
+      margin: var(--spacing);
+      clear: both;
+
+      &[data-role="user"] {
+        max-width: 90%;
+        float: right;
+        background-color: var(--bg2);
+        padding: var(--spacing);
+        border-radius: var(--radius);
+      }
+    }
+  }
+}
