--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -57,11 +57,10 @@ body {
     margin: 0;
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    height: 100%;
+    min-height: 100%;
     background: var(--bg1);
     color: var(--fg2);
     overscroll-behavior: none;
-    overflow: hidden;
     touch-action: manipulation;
 }
 
