--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,4 @@
+@import "loader.css";
 @import "theme.css";
 @import "helpers.css";
 
@@ -5,16 +6,20 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100%;
+  flex-direction: column;
+  height: 100%;
 }
 
 .chat-box {
-  width: 500px;
-  height: 500px;
+  overflow: hidden;
+  height: 100%;
+  flex: 1;
+  width: 880px;
   max-width: 100%;
   display: flex;
   flex-direction: column;
   gap: var(--spacing);
+  padding: 1rem;
 
   form {
     display: flex;
@@ -29,6 +34,7 @@ main {
   .messages {
     flex: 1;
     overflow-y: auto;
+    padding: 1rem;
 
     div {
       margin: var(--spacing);
