made css not inline but still compiled

--- a/static/src/main.css
+++ b/static/src/main.css
@@ -3,6 +3,7 @@
 @import "helpers.css";
 
 main {
+  border: 2px solid var(--primary);
   display: flex;
   justify-content: center;
   align-items: center;
