--- a/static/src/main.css
+++ b/static/src/main.css
@@ -12,6 +12,7 @@ main {
 }
 
 .chat-box {
+  border: 2px solid var(--primary);
   overflow: hidden;
   height: 100%;
   flex: 1;
@@ -21,6 +22,8 @@ main {
   flex-direction: column;
   gap: var(--spacing);
   padding: 1rem;
+  margin-bottom: 1rem;
+  border-radius: calc(var(--radius) * 2);
 
   form {
     display: flex;
