--- a/static/src/theme.css
+++ b/static/src/theme.css
@@ -171,7 +171,7 @@ a {
 
 *:active {
     transition: all 0.1s;
-    background-color: red;
+    background-color: red !important;
 }
 
 *:not(p, input) {
