--- a/static/src/main.css
+++ b/static/src/main.css
@@ -2,13 +2,31 @@
 @import "theme.css";
 @import "helpers.css";
 
+.container {
+  border: 10px solid var(--primary);
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 main {
-  border: 8px solid var(--primary);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100%;
+  flex: 1;
+  overflow: hidden;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  padding: var(--spacing) calc(var(--spacing) * 2);
+  border-bottom: 1px solid var(--fg1);
+
+  * {
+    vertical-align: middle;
+  }
 }
 
 .chat-box {
