--- a/static/src/theme.css
+++ b/static/src/theme.css
@@ -78,7 +78,7 @@ body {
 
 :is(h1, h2, h3, h4, h5, h6) {
     color: var(--fg1);
-    margin: .5em 0;
+    margin: var(--spacing) 0;
 }
 
 :focus-visible {
@@ -117,19 +117,27 @@ input:is([type="button"], [type="reset"], [type="submit"]) {
     font: inherit;
     font-weight: bold;
     color: var(--on-accent);
-    display: block;
 
     &:focus-visible {
         border-color: transparent;
         outline-offset: 2px;
     }
 
-    &:hover {
+    &:hover:not(:disabled) {
         background-color: color-mix(in srgb, var(--accent), var(--on-accent) 15%);
     }
 
-    &:active {
+    &:active:hover:not(:disabled) {
         background-color: color-mix(in srgb, var(--accent), var(--on-accent) 15%);
+        scale: 1.05;
+    }
+
+    &+a {
+        margin-left: var(--spacing);
+    }
+
+    &:disabled {
+        opacity: 0.7;
     }
 }
 
@@ -164,14 +172,9 @@ a {
 
     &:active {
         display: inline-block;
-        scale: 1.1;
+        scale: 1.05;
         color: color-mix(in srgb, var(--accent), currentColor 15%);
     }
-}
-
-*:active {
-    transition: all 0.1s;
-    background-color: red !important;
 }
 
 *:not(p, input) {
@@ -181,6 +184,23 @@ a {
 
 /* Error */
 
-p.error {
+.error-message {
     color: var(--red);
+    padding: var(--spacing);
+    animation: fadeIn .5s ease-in-out;
+}
+
+.message {
+    padding: var(--spacing);
+    animation: fadeIn .5s ease-in-out;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
