--- a/static/src/main.css
+++ b/static/src/main.css
@@ -22,7 +22,7 @@ header {
   display: flex;
   justify-content: space-between;
   padding: var(--spacing) calc(var(--spacing) * 2);
-  border-bottom: 1px solid var(--fg1);
+  /* border-bottom: 1px solid var(--fg1); */
 
   * {
     vertical-align: middle;
