--- a/static/src/theme.css
+++ b/static/src/theme.css
@@ -58,6 +58,7 @@
 * {
     box-sizing: border-box;
     touch-action: manipulation;
+    scroll-behavior: smooth;
 }
 
 html,
@@ -83,7 +84,7 @@ body {
 
 :focus-visible {
     outline: 2px solid var(--accent);
-    outline-offset: -1px;
+    outline-offset: 1px;
 }
 
 p {
@@ -117,7 +118,7 @@ input:is([type="button"], [type="reset"], [type="submit"]) {
     font: inherit;
     font-weight: bold;
     color: var(--on-accent);
-    outline-offset: 2px;
+
 
     &:hover:not(:disabled) {
         background-color: color-mix(in srgb, var(--accent), var(--on-accent) 15%);
@@ -134,6 +135,10 @@ input:is([type="button"], [type="reset"], [type="submit"]) {
 
     &:disabled {
         opacity: 0.7;
+    }
+
+    &:focus-visible {
+        outline-offset: 2px;
     }
 }
 
