--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,19 +7,19 @@
   border-radius: calc(var(--radius) * 10);
   outline: 100px solid var(--primary);
   outline-offset: -1px;
-  height: 100%;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 main {
-  /* opacity: 0.5; */
   display: flex;
-  justify-content: center;
+  /* justify-content: center; FIX LATER*/
   align-items: center;
   flex-direction: column;
-  flex: 1;
-  overflow: hidden;
+  overflow-y: auto;
+  height: 100%;
+  padding: 1rem;
 }
 
 header {
