--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -167,14 +167,19 @@ AnyField {
 /* Links */
 
 a {
-    color: var(--accent);
+    --color: var(--accent);
+    color: var(--color);
     text-decoration: none;
     font-weight: 600;
     border-radius: calc(var(--radius) / 2);
 
+    &.color-primary {
+        --color: var(--primary);
+    }
+
     &:hover {
         /* text-decoration: underline; */
-        color: color-mix(in srgb, var(--accent), var(--fg1) 30%);
+        color: color-mix(in srgb, var(--color), var(--fg1) 30%);
     }
 
 
