--- a/static/css/main.css
+++ b/static/css/main.css
@@ -35,6 +35,19 @@ header {
   }
 }
 
+.banner {
+  text-align: center;
+  background-color: var(--accent);
+  padding: .5rem;
+  color: var(--on-accent);
+  width: 100%;
+
+  a {
+    color: var(--on-accent);
+    text-decoration: underline;
+  }
+}
+
 .chat-box {
   overflow: hidden;
   height: 100%;
