--- a/static/css/main.css
+++ b/static/css/main.css
@@ -40,7 +40,9 @@ header {
   background-color: var(--accent);
   padding: .5rem;
   color: var(--on-accent);
-  width: 100%;
+  width: calc(100% - var(--spacing) * 2);
+  margin: 0 var(--spacing);
+  border-radius: var(--radius);
 
   a {
     color: var(--on-accent);
