--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,7 +4,7 @@
 
 .container {
   border: 10px solid var(--primary);
-  border-radius: calc(var(--radius) * 10);
+  border-radius: calc(var(--radius) * 8);
   outline: 100px solid var(--primary);
   outline-offset: -1px;
   display: flex;
@@ -19,7 +19,6 @@ main {
   flex-direction: column;
   overflow-y: auto;
   height: 100%;
-  padding: 1rem;
   padding-top: 0;
 }
 
@@ -59,13 +58,13 @@ header {
   max-width: 100%;
   display: flex;
   flex-direction: column;
-  gap: var(--spacing);
   border-radius: calc(var(--radius) * 2);
 
   form {
     display: flex;
     clear: both;
-    gap: var(--spacing);
+    font-size: 1.2em;
+    padding: 1rem;
 
     input {
       flex: 1;
