--- a/static/css/main.css
+++ b/static/css/main.css
@@ -26,6 +26,7 @@ header {
   display: flex;
   justify-content: space-between;
   padding: var(--spacing) calc(var(--spacing) * 2);
+  border-bottom: 1px solid color-mix(in srgb, currentColor, transparent 80%);
 
   .left,
   .right,
