--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -19,7 +19,7 @@
     --radius: 4px;
     --border-color: var(--bg3);
     --border-width: 1px;
-    --spacing: 16px;
+    --spacing: 10px;
 }
 
 .theme-light {
@@ -62,6 +62,7 @@
     box-sizing: border-box;
     touch-action: manipulation;
     scroll-behavior: smooth;
+    -webkit-text-size-adjust: 100%;
 }
 
 html,
@@ -82,7 +83,8 @@ body {
 
 :is(h1, h2, h3, h4, h5, h6) {
     color: var(--fg1);
-    margin: var(--spacing) 0;
+    margin-top: calc(var(--spacing)*2);
+    margin-top: calc(var(--spacing));
 }
 
 :focus-visible {
@@ -111,7 +113,7 @@ AnyButton {
     background-color: var(--accent);
     border-radius: var(--radius);
     border: none;
-    padding: calc(var(--spacing)/2) calc(var(--spacing));
+    padding: calc(var(--spacing)) calc(var(--spacing)*2);
     cursor: pointer;
     font: inherit;
     font-weight: bold;
@@ -144,7 +146,7 @@ AnyButton {
 
 AnyField {
     width: 100%;
-    padding: calc(var(--spacing)/2) var(--spacing);
+    padding: calc(var(--spacing)) calc(var(--spacing)*2);
     border: var(--border-width) solid var(--border-color);
     border-radius: var(--radius);
     background-color: var(--bg2);
