--- a/static/css/main.css
+++ b/static/css/main.css
@@ -75,7 +75,9 @@ header {
     }
 
     button {
-      /* padding: var(--spacing); */
+      aspect-ratio: 1 / 1;
+      font-size: 1.5em;
+      padding: 0;
     }
   }
 
