--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,12 +19,14 @@ main {
   flex-direction: column;
   overflow-y: auto;
   height: 100%;
+  padding: 0 var(--spacing);
 }
 
 header {
   display: flex;
   justify-content: space-between;
   padding: calc(var(--spacing) / 2) calc(var(--spacing) * 2);
+  padding-bottom: 0;
   border-bottom: 2px solid color-mix(in srgb, currentColor, transparent 80%);
 
   .left,
@@ -36,6 +38,10 @@ header {
 
   &:has(+ .banner) {
     border-bottom: none;
+  }
+
+  .logo img {
+    scale: 1.15;
   }
 }
 
@@ -68,7 +74,7 @@ header {
     display: flex;
     clear: both;
     font-size: 1em;
-    padding: 1rem;
+    padding: var(--spacing) 0;
 
     input {
       flex: 1;
@@ -84,7 +90,6 @@ header {
   .messages {
     flex: 1;
     overflow-y: auto;
-    padding: 1rem;
 
     div {
       margin: var(--spacing);
