--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,7 +14,8 @@
 
 main {
   display: flex;
-  /* justify-content: center; FIX LATER*/
+  /* FIX LATER */
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   overflow-y: auto;
