--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,4 @@
-@import 'loader.css';
 @import 'theme.css';
-@import 'helpers.css';
 
 .container {
   border: 10px solid var(--primary);
@@ -12,7 +10,7 @@
   height: 100%;
 }
 
-@keyframes f {
+@keyframes pageTransition {
   from {
     scale: 0.9;
     opacity: 0;
@@ -35,7 +33,7 @@ main {
   /* height: 100%; */
   padding: 0 var(--spacing);
 
-  animation: f .3s ease-in-out;
+  animation: pageTransition .3s ease-in-out;
 
   &:has(.chat-box) {
     height: 100%;
@@ -63,6 +61,10 @@ header {
   .logo img {
     scale: 1.15;
   }
+
+  .tokens {
+    margin-right: var(--spacing);
+  }
 }
 
 .banner {
@@ -73,6 +75,7 @@ header {
   width: calc(100% - 8px * 2);
   margin: 2px 8px;
   border-radius: var(--radius);
+  margin-right: var(--spacing);
 
   a {
     color: var(--on-accent);
