--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -93,7 +93,18 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    'Open Sans',
+    'Helvetica Neue',
+    sans-serif;
   height: 100%;
   background: var(--bg1);
   color: var(--fg2);
@@ -142,7 +153,11 @@ form div:has(label) {
 
 /* Buttons */
 
-:is(button, input:is([type="button"], [type="submit"], [type="reset"], [type="file"], [type="color"]), select) {
+:is(
+  button,
+  input:is([type='button'], [type='submit'], [type='reset'], [type='file'], [type='color']),
+  select
+) {
   background-color: var(--accent);
   border-radius: var(--radius);
   border: none;
@@ -176,7 +191,20 @@ form div:has(label) {
 
 /* Inputs */
 
-:is(input:not([type]), input:is([type="text"], [type="password"], [type="email"], [type="number"], [type="url"], [type="tel"], [type="search"], [type="date"]), textarea) {
+:is(
+  input:not([type]),
+  input:is(
+    [type='text'],
+    [type='password'],
+    [type='email'],
+    [type='number'],
+    [type='url'],
+    [type='tel'],
+    [type='search'],
+    [type='date']
+  ),
+  textarea
+) {
   width: 100%;
   padding: calc(var(--spacing)) calc(var(--spacing) * 2);
   border: var(--border-width) solid var(--border-color);
@@ -196,7 +224,52 @@ form div:has(label) {
   }
 }
 
-:is(:is(input:not([type]), input:is([type="text"], [type="password"], [type="email"], [type="number"], [type="url"], [type="tel"], [type="search"], [type="date"]), textarea), :is(button, input:is([type="button"], [type="submit"], [type="reset"], [type="file"], [type="color"]), select), a, .textarea-container)+:is(:is(input:not([type]), input:is([type="text"], [type="password"], [type="email"], [type="number"], [type="url"], [type="tel"], [type="search"], [type="date"]), textarea), :is(button, input:is([type="button"], [type="submit"], [type="reset"], [type="file"], [type="color"]), select), a, .textarea-container) {
+:is(
+  :is(
+    input:not([type]),
+    input:is(
+      [type='text'],
+      [type='password'],
+      [type='email'],
+      [type='number'],
+      [type='url'],
+      [type='tel'],
+      [type='search'],
+      [type='date']
+    ),
+    textarea
+  ),
+  :is(
+    button,
+    input:is([type='button'], [type='submit'], [type='reset'], [type='file'], [type='color']),
+    select
+  ),
+  a,
+  .textarea-container
+)
+  + :is(
+    :is(
+      input:not([type]),
+      input:is(
+        [type='text'],
+        [type='password'],
+        [type='email'],
+        [type='number'],
+        [type='url'],
+        [type='tel'],
+        [type='search'],
+        [type='date']
+      ),
+      textarea
+    ),
+    :is(
+      button,
+      input:is([type='button'], [type='submit'], [type='reset'], [type='file'], [type='color']),
+      select
+    ),
+    a,
+    .textarea-container
+  ) {
   margin-left: var(--spacing);
 }
 
@@ -243,7 +316,12 @@ a {
   animation: fadeIn 0.5s ease-in-out;
 }
 
-:is(button, input:is([type="button"], [type="submit"], [type="reset"], [type="file"], [type="color"]), select)+ :is(.message, .error-message) {
+:is(
+  button,
+  input:is([type='button'], [type='submit'], [type='reset'], [type='file'], [type='color']),
+  select
+)
+  + :is(.message, .error-message) {
   margin-left: var(--spacing);
 }
 
@@ -282,9 +360,12 @@ td {
   color: var(--fg2);
 }
 
-
 /* Disable text selection of UI Elements */
-:is(button, input:is([type="button"], [type="submit"], [type="reset"], [type="file"], [type="color"]), select),
+:is(
+  button,
+  input:is([type='button'], [type='submit'], [type='reset'], [type='file'], [type='color']),
+  select
+),
 a {
   user-select: none;
   -webkit-user-select: none;
