--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -93,18 +93,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family:
-    system-ui,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Open Sans',
-    'Helvetica Neue',
-    sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   height: 100%;
   background: var(--bg1);
   color: var(--fg2);
@@ -165,12 +154,12 @@ form div:has(label) {
   box-shadow: var(--field-shadow);
 
   &:hover:not(:disabled) {
-    background-color: color-mix(in srgb, var(--accent), var(--on-accent) 15%);
+    background-color: color-mix(in srgb, currentColor, var(--on-accent) 15%);
     box-shadow: none;
   }
 
   &:active:hover:not(:disabled) {
-    background-color: color-mix(in srgb, var(--accent), var(--on-accent) 15%);
+    background-color: color-mix(in srgb, currentColor, var(--on-accent) 15%);
     scale: 1.05;
   }
 
