fix pwa detection

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -142,22 +142,16 @@ p {
   font: inherit;
 }
 
-form div:has(label) {
-  margin: var(--spacing) 0;
-
-  & label {
-    display: block;
-    margin-bottom: calc(var(--spacing) / 3);
-  }
+:is(button, input, select, textarea, .textarea-container)+label {
+  display: block;
+  margin-bottom: calc(var(--spacing) / 3);
 }
 
 /* Buttons */
 
-:is(
-  button,
+:is(button,
   input:is([type='button'], [type='submit'], [type='reset'], [type='file'], [type='color']),
-  select
-) {
+  select) {
   background-color: var(--accent);
   border-radius: var(--radius);
   border: none;
@@ -191,20 +185,16 @@ form div:has(label) {
 
 /* Inputs */
 
-:is(
-  input:not([type]),
-  input:is(
-    [type='text'],
+:is(input:not([type]),
+  input:is([type='text'],
     [type='password'],
     [type='email'],
     [type='number'],
     [type='url'],
     [type='tel'],
     [type='search'],
-    [type='date']
-  ),
-  textarea
-) {
+    [type='date']),
+  textarea) {
   width: 100%;
   padding: calc(var(--spacing)) calc(var(--spacing) * 2);
   border: var(--border-width) solid var(--border-color);
@@ -224,52 +214,7 @@ form div:has(label) {
   }
 }
 
-:is(
-  :is(
-    input:not([type]),
-    input:is(
-      [type='text'],
-      [type='password'],
-      [type='email'],
-      [type='number'],
-      [type='url'],
-      [type='tel'],
-      [type='search'],
-      [type='date']
-    ),
-    textarea
-  ),
-  :is(
-    button,
-    input:is([type='button'], [type='submit'], [type='reset'], [type='file'], [type='color']),
-    select
-  ),
-  a,
-  .textarea-container
-)
-  + :is(
-    :is(
-      input:not([type]),
-      input:is(
-        [type='text'],
-        [type='password'],
-        [type='email'],
-        [type='number'],
-        [type='url'],
-        [type='tel'],
-        [type='search'],
-        [type='date']
-      ),
-      textarea
-    ),
-    :is(
-      button,
-      input:is([type='button'], [type='submit'], [type='reset'], [type='file'], [type='color']),
-      select
-    ),
-    a,
-    .textarea-container
-  ) {
+:is(input, button, select a, .textarea-container)+:is(input, button, select a, .textarea-container) {
   margin-left: var(--spacing);
 }
 
@@ -298,11 +243,6 @@ a {
   }
 }
 
-/* *:not(p, input) {
-    user-select: none;
-    -webkit-user-select: none;
-} */
-
 /* Error */
 
 .error-message {
@@ -316,12 +256,7 @@ a {
   animation: fadeIn 0.5s ease-in-out;
 }
 
-:is(
-  button,
-  input:is([type='button'], [type='submit'], [type='reset'], [type='file'], [type='color']),
-  select
-)
-  + :is(.message, .error-message) {
+:is(button, input, select)+ :is(.message, .error-message) {
   margin-left: var(--spacing);
 }
 
@@ -361,12 +296,7 @@ td {
 }
 
 /* Disable text selection of UI Elements */
-:is(
-  button,
-  input:is([type='button'], [type='submit'], [type='reset'], [type='file'], [type='color']),
-  select
-),
-a {
+:is(button, label, select, a) {
   user-select: none;
   -webkit-user-select: none;
 }
